design bug fix for archive name overflow

--- a/css/popup.css
+++ b/css/popup.css
@@ -30,3 +30,11 @@
 	margin: 0;
 	text-align: right;
 }
+
+.bottombar a.openTabs {
+	display: block;
+	width: 248px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
